fixed the cropping of the quote tweet icon, updated names on stuff, added an audit popup for reviewing links, etc

--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -104,13 +104,13 @@
   &::after
     content: ""
     height: 2rem
-    width: rem(40)
+    width: rem(41)
     background: url(/img/svg/tweetlink.svg)
     background-size: cover
     background-position: right
     display: inline-block
     margin-left: 1rem
-    overflow: hidden
+    overflow: visible
     a
       width: 3rem
 
